force-app/main/default/objects/OpenRentals__c/OpenRentals__c.object-meta.xml
<CustomObject>
    <label>Open Rentals</label>
    <nameField>
        <label>Open Rentals</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Open Rentals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>