force-app/main/default/objects/OpenRentals__c/fields/Active_Cars__c.field-meta.xml
<CustomField>
    <fullName>Active_Cars__c</fullName>
    <formula>IF ((Import_Date__c = TODAY() &amp;&amp;  Drop_off__c  &gt; TODAY() -3), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active Cars</label>
    <type>Checkbox</type>
</CustomField>