force-app/main/default/objects/OpenRentals__c/fields/Check_In_City__c.field-meta.xml
<CustomField>
    <fullName>Check_In_City__c</fullName>
    <label>Check-In City</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>