force-app/main/default/objects/OpenRentals__c/fields/driven_group__c.field-meta.xml
<CustomField>
    <fullName>driven_group__c</fullName>
    <label>driven group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>