force-app/main/default/objects/OpenRentals__c/fields/Drop_off__c.field-meta.xml
<CustomField>
    <fullName>Drop_off__c</fullName>
    <label>Drop off</label>
    <type>Date</type>
</CustomField>