force-app/main/default/objects/OpenRentals__c/fields/LoR__c.field-meta.xml
<CustomField>
    <fullName>LoR__c</fullName>
    <formula>Drop_off__c -  Pickup_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LoR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>