force-app/main/default/objects/OpenRentals__c/fields/Paym__c.field-meta.xml
<CustomField>
    <fullName>Paym__c</fullName>
    <label>Paym.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>