force-app/main/default/objects/OpenRentals__c/fields/RA_No__c.field-meta.xml
<CustomField>
    <fullName>RA_No__c</fullName>
    <label>RA No.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>