force-app/main/default/objects/OpenRentals__c/fields/Registration__c.field-meta.xml
<CustomField>
    <fullName>Registration__c</fullName>
    <externalId>true</externalId>
    <label>Registration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>