force-app/main/default/objects/OpenRentals__c/fields/RLD__c.field-meta.xml
<CustomField>
    <fullName>RLD__c</fullName>
    <label>RLD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>