force-app/main/default/objects/OpenRentals__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RA_No__c</columns>
    <columns>Internal_No__c</columns>
    <columns>Registration__c</columns>
    <columns>Surname__c</columns>
    <columns>Name_2__c</columns>
    <columns>Check_Out_City__c</columns>
    <columns>Pickup_Date__c</columns>
    <columns>Check_In_City__c</columns>
    <columns>Drop_off__c</columns>
    <columns>Rate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>